@@ -5,12 +5,14 @@ import com.ssafy.a208.domain.board.reader.PostReader;
 import com.ssafy.a208.domain.member.entity.Member;
 import com.ssafy.a208.domain.member.reader.MemberReader;
 import com.ssafy.a208.domain.scrap.dto.ScrapListRes;
-import com.ssafy.a208.domain.scrap.dto.ScrapPostDto;
+import com.ssafy.a208.domain.scrap.dto.ScrapPostListItemDto;
+import com.ssafy.a208.domain.scrap.dto.ScrapPostProjection;
 import com.ssafy.a208.domain.scrap.dto.ScrapQueryDto;
 import com.ssafy.a208.domain.scrap.entity.Scrap;
 import com.ssafy.a208.domain.scrap.exception.ScrapAlreadyExistsException;
 import com.ssafy.a208.domain.scrap.reader.ScrapReader;
 import com.ssafy.a208.domain.scrap.repository.ScrapRepository;
+import com.ssafy.a208.domain.tag.entity.PostTag;
 import com.ssafy.a208.global.image.service.S3Service;
 import com.ssafy.a208.global.security.dto.CustomUserDetails;
 import lombok.RequiredArgsConstructor;
@@ -22,6 +24,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -138,34 +141,57 @@ public class ScrapService {
         // 페이징 설정
         Pageable pageable = PageRequest.of(query.page() - 1, query.size());
 
-        // QueryDSL을 통한 동적 쿼리 실행
-        Page<Scrap> scrapPage = scrapReader.getScrapsByMemberWithFilters(member, query, pageable);
+        // Projection 기반 조회
+        Page<ScrapPostProjection> scrapPage =
+                scrapReader.getScrapsByMemberWithFilters(member, query, pageable);
+
+        // 게시글 ID 목록 추출
+        List<Long> postIds = scrapPage.getContent().stream()
+                .map(ScrapPostProjection::getPostId)
+                .toList();
+
+        // 태그 배치 조회
+        List<PostTag> postTags = scrapReader.getPostTagsByPostIds(postIds);
+
+        // 게시글 ID별 태그 맵 생성
+        Map<Long, List<String>> tagMap = postTags.stream()
+                .collect(Collectors.groupingBy(
+                        pt -> pt.getPost().getId(),
+                        Collectors.mapping(
+                                pt -> pt.getTag().getName(),
+                                Collectors.toList()
+                        )
+                ));
 
         // DTO 변환
-        List<ScrapPostDto> posts = scrapPage.getContent().stream()
-                .map(scrap -> {
-                    Post post = scrap.getPost();
+        List<ScrapPostListItemDto> posts = scrapPage.getContent().stream()
+                .map(projection -> {
+                    // 프로필 이미지 URL 변환
+                    String profileUrl = projection.getProfilePath() != null
+                            ? s3Service.getCloudFrontUrl(projection.getProfilePath())
+                            : null;
 
-                    // 프로필 사진
-                    String profileKey = post.getAuthor().getProfileImage();
-                    String profileUrl = profileKey != null ?
-                            s3Service.getCloudFrontUrl(profileKey) : null;
+                    // 썸네일 URL 변환
+                    String fileUrl = projection.getFilePath() != null
+                            ? s3Service.getCloudFrontUrl(projection.getFilePath())
+                            : null;
 
-                    return ScrapPostDto.builder()
-                            .postId(post.getId())
-                            .author(post.getAuthor().getNickname())
-                            .profile(profileUrl)
-                            .title(post.getTitle())
-                            .type(post.getType().getName())
-                            .category(post.getCategory().getName())
-                            .tags(post.getPostTags().stream()
-                                    .filter(postTag -> postTag.getDeletedAt() == null)
-                                    .map(postTag -> postTag.getTag().getName())
-                                    .collect(Collectors.toList()))
-                            .isDeleted(post.getDeletedAt() != null)
+                    // 태그 목록
+                    List<String> tags = tagMap.getOrDefault(projection.getPostId(), List.of());
+
+                    return ScrapPostListItemDto.builder()
+                            .postId(projection.getPostId())
+                            .author(projection.getAuthorNickname())
+                            .profileUrl(profileUrl)
+                            .title(projection.getTitle())
+                            .type(projection.getType().getName())
+                            .category(projection.getCategory().getName())
+                            .fileUrl(fileUrl)
+                            .tags(tags)
+                            .isDeleted(projection.getIsDeleted())
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("스크랩 목록 조회 완료 - memberId: {}, page: {}, size: {}, totalCount: {}",
                 member.getId(), query.page(), query.size(), scrapPage.getTotalElements());
